--- a/public/styles.css
+++ b/public/styles.css
@@ -20,8 +20,23 @@ body {
     margin-left: 200px;
 }
 
-#potree_menu{
+/* #potree_menu{
     position: relative;
     margin-left: 0px;
-  }
+} */
+
+.btn-group{
+    position: relative;
+    float: right;
+    top: 80%;
+    right: 30%;
+    border-radius: 12px;
+}
   
+.btn{
+    margin-right: 5px;
+    margin-right: 5px;
+    border-radius: 12px;
+    color: rgb(7, 5, 5);
+    border: 1px solid black;
+}
